--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         tools:targetApi="31">
         <activity
             android:name=".register_page"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".login_page"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".MainActivity2"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
