--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".register_page"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".login_page"
             android:exported="false" />
