--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".register_page"
             android:exported="true"></activity>
+        <activity
+            android:name=".login_page"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
