1026 先存一下好了 不然等一下找不回來:( - 還有問題沒解決： 1. HomeFragment.java 不能同時extends Fragment和AppCompatActivity 2. HomeFragment.java 不能用findViewById（因為沒有extends AppCompatActivity）
:(((((((

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ android {
     namespace 'com.example.uibasic'
     compileSdk 33
 
+    //1026
+    dataBinding.enabled = true
+
     defaultConfig {
         applicationId "com.example.uibasic"
         minSdk 19
