--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.uibasic"
-        minSdk 19
+        minSdk 33
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    //implementation 'androidx.recyclerview:recyclerview:1.3.2'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
