1029 （昨天電腦突然當掉不能打中文...orz 昨天下午匯入calendar，但中間和右邊的button一按就當掉☹️不過左邊的可以用） （還把一些移到activity_main.xml的移回fragment_home.xml，不然每個頁面都會有魚＆水草等等.....） 把button修好了！！！！！:DDDD （在AndroidManifest.xml的.login_page、.register_page、.MainActivity3的<activity>裡加上android:theme="@style/Theme.AppCompat.Light.NoActionBar"）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity3"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true" >
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
@@ -27,9 +28,11 @@
             <!-- 1025 但是加上intent-filter那串好像就當掉ㄌ？？？:( -->
         <activity
             android:name=".register_page"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true" />
         <activity
             android:name=".login_page"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
