--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity3"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat"
+            android:label="@string/app_name">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
