--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
         //0806
         implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation files('libs\\mysql-connector-java-5.1.48-bin.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
