--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Aquarium"
+        android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity3"
@@ -26,6 +26,12 @@
         </activity>
             <!-- 1025 android:exported 改成true試試看 -->
             <!-- 1025 但是加上intent-filter那串好像就當掉ㄌ？？？:( -->
+        <activity
+            android:name=".WeekViewActivity"
+            android:theme="@style/Theme.AppCompat"/>
+        <activity
+            android:name=".EventEditActivity"
+            android:exported="true"/>
         <activity
             android:name=".register_page"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
@@ -46,7 +52,9 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+
         </activity>
+
     </application>
 
 </manifest>
