--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             <!-- 1025 android:exported 改成true試試看 -->
             <!-- 1025 但是加上intent-filter那串好像就當掉ㄌ？？？:( -->
         <activity
+            android:name=".WeekViewActivity"
+            android:theme="@style/Theme.AppCompat"/>
+        <activity
+            android:name=".EventEditActivity"
+            android:exported="true"/>
+        <activity
             android:name=".register_page"
             android:exported="true"
             android:theme="@style/Theme.AppCompat">
